--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,6 +17,8 @@
                     "**/.devcontainer": true,
                     "**/.github": true
                 },
+                // configure the innitial default theme
+                "workbench.colorTheme": "Visual Studio Dark",
                 // enable to use deno as the typescript language server, see "https://docs.deno.com/runtime/getting_started/installation/"
                 "deno.enable": true,
                 // enable to use deno as the testing framework
