--- a/.github/workflows/update-codesapce.yml
+++ b/.github/workflows/update-codesapce.yml
@@ -12,13 +12,9 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Authenticate with GitHub CLI
-              env:
-                  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: |
-                  echo "$GH_TOKEN" | gh auth login --with-token
-
             - name: Rebuild codespace for this repo
+            #   env:
+            #       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   gh codespace list --repo ${{ github.repository }} --json name | jq -r '.[].name' | while read codespace_name; do
                     echo "Rebuilding codespace: $codespace_name"
