--- a/.github/workflows/update-codesapce.yml
+++ b/.github/workflows/update-codesapce.yml
@@ -13,8 +13,8 @@ jobs:
 
         steps:
             - name: Rebuild codespace for this repo
-            #   env:
-            #       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              env:
+                  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   gh codespace list --repo ${{ github.repository }} --json name | jq -r '.[].name' | while read codespace_name; do
                     echo "Rebuilding codespace: $codespace_name"
