add live server extension to VSCode customizations

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "Tyriar.lorem-ipsum"
+                "Tyriar.lorem-ipsum",
+                "ritwickdey.liveserver"
             ]
         }
     }
